--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -96,6 +96,7 @@
     </title>
 
     <link rel="stylesheet" href="{% static 'vendor/node_modules/bootstrap/dist/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/node_modules/bootstrap-icons/font/bootstrap-icons.css' %}">
     <script src="{% static 'vendor/node_modules/jquery/dist/jquery.slim.min.js' %}"></script>
     <script src="{% static 'vendor/node_modules/popper.js/dist/popper.min.js' %}"></script>
     <script src="{% static 'vendor/node_modules/bootstrap/dist/js/bootstrap.min.js' %}"></script>
@@ -111,7 +112,6 @@
         <link rel="stylesheet" href="{% static 'css/Themes/general-theme/general-theme.css' %}">
         <link rel="stylesheet" href="{% static 'css/Themes/highlight.css' %}">
         <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-        <link rel="stylesheet" href="{% static 'img/bootstrap-icons.svg' %}">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
     {% endblock rel %}
 
