--- a/khoBlog/templates/includes/auth.html
+++ b/khoBlog/templates/includes/auth.html
@@ -52,8 +52,8 @@
     </div>
 
     <div class="btn-group-vertical d-block" role="group" aria-label="Group Provider Account">
-        <a class="mb-0 btn btn-primary" href="{% provider_login_url 'google' %}">Login with Google</a>
-        <a class="mb-0 btn btn-primary" href="{% provider_login_url 'discord' %}">Login with Discord</a>
+        <a class="mb-0 btn btn-primary" href="{% provider_login_url 'google' %}"><i class="bi bi-google"></i></a>
+        <a class="mb-0 btn btn-primary" href="{% provider_login_url 'discord' %}"><i class="bi bi-discord"></i></a>
     </div>
 
 {% endif %}
