omfg please work

--- a/khoBlog/static/css/custom.scss
+++ b/khoBlog/static/css/custom.scss
@@ -14,4 +14,4 @@ $link-hover-color: $link-hover-color;
 
 $font-family: $font-family-base;
 
-@import '../vendor/node_modules/bootstrap/scss/bootstrap';
+@import '../vendor/node_modules/bootstrap/scss/bootstrap.scss';
