--- a/blog/templates/blog/superbuttons.html
+++ b/blog/templates/blog/superbuttons.html
@@ -21,7 +21,7 @@
                 </a>
             </div>
 
-            <div class="btn-group mr-2" role="group" aria-label="Edit Group">
+            <div class="btn-group" role="group" aria-label="Edit Group">
                 <a class="btn btn-light" href="{% url 'blog:post_edit' slug=post.slug %}">
                     <i class="bi bi-pencil-square"></i>
                 </a>
