--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -31,7 +31,9 @@
                     {% include 'blog/postdates.html' %}
                 </div>
                 <span class="card-text">{{ post.body|formatted_markdown|safe }}</span>
-                <a href="{{ post.url_post_type }}" class="card-link">{{ post.url_post_type_name }}</a>
+                {% if post.url_post_type %}
+                    <a href="{{ post.url_post_type }}" class="card-link">{{ post.url_post_type_name }}</a>
+                {% endif %}
             </div>
 
             <div id="comments" class="card-footer border-secondary">
