--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -14,7 +14,7 @@
 
     {% for comment in comments %}
         {% if comment.author_logged.id == object.id %}
-            <a href="{{ comment.get_absolute_url }}">{{comment.message}}</a>
+            <p><a href="{{ comment.get_absolute_url }}">{{comment.message}}</a></p>
         {% endif %}
     {% endfor %}
 
