--- a/blog/templates/blog/postcomments.html
+++ b/blog/templates/blog/postcomments.html
@@ -24,7 +24,7 @@
                                         </a>
 
                                         <a class="btn btn-light" href="{% url 'blog:comment_approve' pk=comment.pk %}">
-                                            <i class="bi bi-check-square"></i>
+                                            <i class="bi bi-check2-square"></i>
                                         </a>
                                     {% endif %}
 
