--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -175,9 +175,9 @@
                     <p class="mb-2">Khodok's Blog, Read at own risks</p>
 
                     <div class="btn-group-vertical d-block" role="group" aria-label="Group Accounts">
-                        <a href="{% url 'blog:latest' %}" class="btn btn-primary mb-lg-0 mb-2">Latest Post</a>
-                        <a href="{% url 'blog:category_list' %}" class="btn btn-primary mb-lg-0 mb-2">Category List</a>
-                        <a href="{% url 'portfolio:project_list' %}" class="btn btn-primary mb-lg-0 mb-2">Portfolio</a>
+                        <a href="{% url 'blog:latest' %}" class="btn btn-primary">Latest Post</a>
+                        <a href="{% url 'blog:category_list' %}" class="btn btn-primary">Category List</a>
+                        <a href="{% url 'portfolio:project_list' %}" class="btn btn-primary">Portfolio</a>
                     </div>
                 </div>
 
