--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -62,8 +62,8 @@
         <div class="pagination">
             <span class="step-links">
                 {% if page_obj.has_previous %}
-                    <a class="btn btn-outline-primary" href="?page=1">&laquo; First</a>
-                    <a class="btn btn-outline-primary" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                    <a class="btn btn-secondary" href="?page=1">&laquo; First</a>
+                    <a class="btn btn-primary" href="?page={{ page_obj.previous_page_number }}">Previous</a>
                 {% endif %}
 
                 <span class="current">
@@ -71,8 +71,8 @@
                 </span>
 
                 {% if page_obj.has_next %}
-                    <a class="btn btn-outline-secondary" href="?page={{ page_obj.next_page_number }}">Next</a>
-                    <a class="btn btn-outline-secondary"
+                    <a class="btn btn-primary" href="?page={{ page_obj.next_page_number }}">Next</a>
+                    <a class="btn btn-secondary"
                        href="?page={{ page_obj.paginator.num_pages }}">Last &raquo;</a>
                 {% endif %}
             </span>
