--- a/khoBlog/static/css/blog.scss
+++ b/khoBlog/static/css/blog.scss
@@ -1,6 +1,8 @@
+@import '_variables.scss';
+
 .blog-header {
     line-height: 1;
-    border-bottom: 1px solid #e5e5e5;
+    border-bottom: 1px solid $palette_secondary;
 }
 
 .blog-header p {
@@ -76,36 +78,16 @@
 
 /* Pagination */
 .blog-pagination {
-    margin-bottom: 4rem;
+    margin-bottom: 16px;
 }
 .blog-pagination > .btn {
     border-radius: 2rem;
 }
 
-/*
-   * Blog posts
-   */
-.blog-post {
-    margin-bottom: 4rem;
-}
-.blog-post-title {
-    margin-bottom: 0.25rem;
-    font-size: 2.5rem;
-}
-.blog-post-meta {
-    margin-bottom: 1.25rem;
-    color: #999;
-}
-
-/*
-   * Footer
-   */
 .blog-footer {
     padding: 2.5rem 0;
-    color: #999;
     text-align: center;
-    background-color: #f9f9f9;
-    border-top: 0.05rem solid #e5e5e5;
+    border-top: 0.05rem solid $palette_secondary;
 }
 .blog-footer p:last-child {
     margin-bottom: 0;
