--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -13,7 +13,7 @@
                     Post #{{ post.id }}
                     {% if post.url_post_type %}
                         <a href="{{ post.url_post_type }}">
-                            <i class="bi bi-link"></i>
+                            <i class="bi bi-link-45deg"></i>
                         </a>
                     {% endif %}
 
