--- a/blog/templates/blog/postcomments.html
+++ b/blog/templates/blog/postcomments.html
@@ -15,7 +15,7 @@
                             {{ comment.author_logged }}
                         {% endif %}
                     {% endif %}
-                        <a href="#comment-{{ comment.id }}">Permalink</a>
+                        <a href="#comment-{{ comment.id }}"><i class="bi bi-link-45deg"></i></a>
                         <span class="float-right">
                             {% if user.is_superuser %}
                                 <div class="btn-group d-flex col-12 col-lg-5 p-0" role="group" aria-label="Comments Group">
