--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -158,7 +158,7 @@
 
     <main role="main" class="container-fluid">
         <div class="row">
-            <div class="col-xl-9 col-md-8 blog-main">
+            <div class="col-xl-9 col-md-8">
 
                 {% block page_top_title %}
                 {% endblock page_top_title %}
