--- a/khoBlog/templates/account/edit_profile.html
+++ b/khoBlog/templates/account/edit_profile.html
@@ -12,7 +12,7 @@
         {% csrf_token %}
         {% bootstrap_form form %}
         {% buttons %}
-            <button type="submit" class="btn btn-dark">Update profile</button>
+            <button type="submit" class="btn btn-primary">Update profile</button>
         {% endbuttons %}
     </form>
 
