--- a/blog/templates/blog/post_modale.html
+++ b/blog/templates/blog/post_modale.html
@@ -51,6 +51,8 @@
                         {% include 'blog/postdates.html' %}
                         <h5 class="mt-2">Categories</h5>
                         {% include 'blog/postcategories.html' %}
+                        <h5 class="mt-2">Clicks</h5>
+                        <p>{{ post.clicks }}</p>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
