--- a/blog/templates/blog/postcomments.html
+++ b/blog/templates/blog/postcomments.html
@@ -6,8 +6,14 @@
             <div id="comment-{{ comment.id }}" class="card text-white border-secondary bg-dark mt-2">
                 <div class="card-header">
                     <h4>
-                        {% if comment.author %}
+                        {% if comment.author or comment.author_logged and comment.author %}
                             {{ comment.author }}
+
+                            {% if user.is_superuser or user.id == comment.author_logged.id %}
+                                <a href="{{ comment.author_logged.get_absolute_url }}">{{ comment.author }}</a>
+                            {% elif comment.author_logged.owner and user.is_authenticated %}
+                                <a href="{{ comment.author_logged.get_absolute_url }}">{{ comment.author }}</a>
+                            {% endif %}
                         {% else %}
                             {% if user.is_superuser or user.id == comment.author_logged.id %}
                                 <a href="{{ comment.author_logged.get_absolute_url }}">{{ comment.author_logged }}</a>
