--- a/khoBlog/static/css/Themes/highlight.scss
+++ b/khoBlog/static/css/Themes/highlight.scss
@@ -396,4 +396,14 @@
     color: #2aa198;
 }
 
+.highlight .linenos {
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE10+/Edge */
+    user-select: none; /* Standard */
+    color: gray;
+    margin-right: 16px;
+    margin-left: 0px;
+}
+
 /* Literal.Number.Integer.Long */
